<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="somame.amebleysystems.com.somame.MainCategoryActivity">

    <item
        android:id="@+id/action_main_cat_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share"
        tools:ignore="AppCompatResource"
        />
    <item
        android:id="@+id/action_main_cat_agent"
        android:orderInCategory="200"
        android:title="@string/become_an_agent"
        app:showAsAction="never"
        tools:ignore="AppCompatResource"
        />

    <item
        android:id="@+id/action_main_cat_my_account"
        android:orderInCategory="300"
        android:title="@string/settings"
        app:showAsAction=""
        android:icon="@drawable/ic_account_circle_black_24dp"
        tools:ignore="AppCompatResource"
        />
    <item
        android:id="@+id/action_main_cat_sign_out"
        android:orderInCategory="400"
        android:title="@string/sign_out"
        app:showAsAction="withText"
        android:icon="@drawable/ic_arrow_left_black_48dp"
        tools:ignore="AppCompatResource"
        />

</menu>