<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <EditText
        android:id="@+id/dialog_edittext_user_acc_setup_firstname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_firstname"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:scrollbars="vertical"
        android:padding="12dp"
        android:layout_margin="4dp"
        />
    <EditText
        android:id="@+id/dialog_edittext_user_acc_setup_lastname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_lastname"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:scrollbars="vertical"
        android:padding="12dp"
        android:layout_margin="4dp"
        />
    <EditText
        android:id="@+id/dialog_edittext_user_acc_setup_current_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_current_password"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLines="1"
        android:scrollbars="vertical"
        android:padding="12dp"
        android:layout_margin="4dp"
        />
    <EditText
        android:id="@+id/dialog_edittext_user_acc_setup_new_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLines="1"
        android:scrollbars="vertical"
        android:padding="12dp"
        android:layout_margin="4dp"
        />
    <EditText
        android:id="@+id/dialog_edittext_user_acc_setup_confirm_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLines="1"
        android:scrollbars="vertical"
        android:padding="12dp"
        android:layout_margin="4dp"
        />

</LinearLayout>