<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="somame.amebleysystems.com.somame.RestaurantFoodDetailActivity">

    <item
        android:id="@+id/action_user_acc_details_share"
        android:orderInCategory="100"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        android:tooltipText="@string/share"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_user_acc_details_save"
        android:orderInCategory="200"
        android:title="@string/save"
        android:icon="@drawable/ic_done_white"
        android:tooltipText="@string/save"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_user_acc_details_sign_out"
        android:orderInCategory="300"
        android:title="@string/sign_out"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />
</menu>