<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="somame.amebleysystems.com.somame.CheckOutActivity">

    <item
        android:id="@+id/action_check_out_prev"
        android:orderInCategory="100"
        android:title="@string/view_basket"
        android:icon="@drawable/ic_prev_white"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_check_out_next"
        android:orderInCategory="100"
        android:title="@string/view_basket"
        android:icon="@drawable/ic_next_white"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_check_out_goto_basket"
        android:orderInCategory="200"
        android:title="@string/view_basket"
        android:icon="@drawable/ic_product_basket"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_check_out_share"
        android:orderInCategory="300"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />


    <item
        android:id="@+id/action_check_out_my_account"
        android:orderInCategory="400"
        android:title="@string/settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_account_circle_black_24dp"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_check_out_sign_out"
        android:orderInCategory="500"
        android:title="@string/sign_out"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />
</menu>