<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="somame.amebleysystems.com.somame.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:id="@+id/layout_reset_top">

        <TextView
            android:textSize="16sp"
            android:layout_marginStart="18dp"
            android:textColor="@color/colorGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset_verify_title"
            android:text="@string/we_sent_a_password_reset_code_to"
            />
        <TextView
            android:textSize="16sp"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colorGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_reset_verify_phone"
            android:text="@string/reset_phone_text"
            />
        <TextView
            android:textSize="16sp"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_verification_code"
            android:text="@string/verification_code"
            />
        <EditText
            android:id="@+id/edittex_reset_code"
            android:inputType="number"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/reset_code_hint"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_reset_top"
        android:gravity="center_horizontal"
        >

        <ProgressBar
            android:id="@+id/progress_reset_verify"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/colorGrayL"
        android:id="@+id/layout_reset_verify_bottom">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start">
            <ImageButton
                android:id="@+id/button_reset_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_left"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/previous"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">
            <TextView
                android:id="@+id/textview_reset_next"
                android:text="@string/next"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorMyVioletPrimary"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>



    </LinearLayout>


</RelativeLayout>
